--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,13 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/latTextView"
+        android:id="@+id/tvLat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Latitude: "/>
 
     <TextView
-        android:id="@+id/lonTextView"
+        android:id="@+id/tvLong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Longitude: "/>
